--- a/page_1.html
+++ b/page_1.html
@@ -4,7 +4,7 @@
 			<title> Ítalo Lima </title>
 			<style type="text/css">
 				
-				body{background-image: url("background2.jpg");
+				body{background-image: url("img/background2.jpg");
 					background-position: center;
 					background-repeat: no-repeat;
 					background-attachment: fixed;
@@ -38,28 +38,28 @@
 				#github:hover, #linkedin:hover, #curriculum:hover, 
 				#instagram:hover, #twitter:hover{background-size: 40px 40px;}
 				
-				#github{background: url("github1.png");
+				#github{background: url("img/github1.png");
 						background-repeat: no-repeat;
 						background-size: 50px 50px;
 						width: 55px;
 						height: 55px;
 						}		
-				#linkedin{background: url("linkedin1.png");
+				#linkedin{background: url("img/linkedin1.png");
 						background-repeat: no-repeat;
 						background-size: 50px 50px;
 						width: 55px;
 						height: 55px;}
-				#curriculum{background: url("curriculum1.png");
+				#curriculum{background: url("img/curriculum1.png");
 						background-repeat: no-repeat;
 						background-size: 50px 50px;
 						width: 55px;
 						height: 55px;}
-				#instagram{background: url("instagram1.png");
+				#instagram{background: url("img/instagram1.png");
 						background-repeat: no-repeat;
 						background-size: 50px 50px;
 						width: 55px;
 						height: 55px;}	
-				#twitter{background: url("twitter1.png");
+				#twitter{background: url("img/twitter1.png");
 						background-repeat: no-repeat;
 						background-size: 70px 70px;
 						width: 65px;
@@ -76,7 +76,7 @@
 			<div id="bttn">
 				<a href="https://github.com/italoou"><button id="github"></button></a>
 				<a href="https://www.linkedin.com/in/italotlima/"><button id="linkedin"></button></a>
-				<a href="Italo Teixeira de Lima - Curriculo.pdf" download="curriculum"><button id="curriculum"> </button></a>
+				<a href="download/curriculum" download="curriculum"><button id="curriculum"> </button></a>
 				<a href="https://www.instagram.com/italou__/"><button id="instagram"></button></a>
 				<a href="https://twitter.com/italou__"><button id="twitter"></button></a>
 			</div>
